--- a/configure.ac
+++ b/configure.ac
@@ -34,6 +34,9 @@ IT_PROG_INTLTOOL([0.35.0])
 
 
 PKG_CHECK_MODULES(GTK, [gtk+-3.0])
+PKG_CHECK_MODULES(PANGO, [pango])
+PKG_CHECK_MODULES(CAIRO, [cairo])
+PKG_CHECK_MODULES(PANGOCAIRO, [pangocairo])
 PKG_CHECK_MODULES(GDA, [libgda-5.0])
 PKG_CHECK_MODULES(XML, [libxml-2.0])
 PKG_CHECK_MODULES(GEE, [gee-1.0])
