Move src files to subdirectories

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,43 +1,43 @@
 # List of source files containing translatable strings.
 
 
-src/administrator-edit-dialog.c
-src/administrator-edit-widget.c
-src/administrator-list.c
-src/administrator.c
-src/admin-login-page.c
-src/application.c
-src/cpanel-administrators.c
-src/cpanel-employees.c
-src/cpanel-holidays.c
-src/cpanel-preferences.c
-src/cpanel-report.c
-src/cpanel-tab.c
-src/cpanel-time-records.c
-src/cpanel.c
-src/database.c
-src/date-entry.c
-src/date-time-entry.c
-src/employee-edit-dialog.c
-src/employee-edit-widget.c
-src/employee-list.c
-src/employee-login-page.c
-src/employee.c
-src/filter.c
-src/login-page.c
-src/mobilect-payroll.c
-src/month-info.c
-src/overtime-report.c
-src/password-dialog.c
-src/password-widget.c
-src/pay-group.c
-src/pay-period.c
-src/regular-report.c
-src/report.c
-src/time-period.c
-src/time-record-edit-dialog.c
-src/time-record-edit-widget.c
-src/time-record-list.c
-src/time-record.c
-src/time.c
-src/window.c
+src/cpanel/cpanel-administrators.c
+src/cpanel/cpanel-employees.c
+src/cpanel/cpanel-holidays.c
+src/cpanel/cpanel-preferences.c
+src/cpanel/cpanel-report.c
+src/cpanel/cpanel-tab.c
+src/cpanel/cpanel-time-records.c
+src/cpanel/cpanel.c
+src/database/administrator-list.c
+src/database/administrator.c
+src/database/database.c
+src/database/employee-list.c
+src/database/employee.c
+src/database/month-info.c
+src/database/time-record-list.c
+src/database/time-record.c
+src/datetime/date-entry.c
+src/datetime/date-time-entry.c
+src/datetime/time.c
+src/filter/filter.c
+src/filter/pay-group.c
+src/filter/pay-period.c
+src/filter/time-period.c
+src/login/admin-login-page.c
+src/login/employee-login-page.c
+src/login/login-page.c
+src/main/application.c
+src/main/mobilect-payroll.c
+src/main/window.c
+src/report/overtime-report.c
+src/report/regular-report.c
+src/report/report.c
+src/widgets/administrator-edit-dialog.c
+src/widgets/administrator-edit-widget.c
+src/widgets/employee-edit-dialog.c
+src/widgets/employee-edit-widget.c
+src/widgets/password-dialog.c
+src/widgets/password-widget.c
+src/widgets/time-record-edit-dialog.c
+src/widgets/time-record-edit-widget.c
