--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -27,46 +27,46 @@ AM_CFLAGS = \
 bin_PROGRAMS = mobilect-payroll
 
 mobilect_payroll_SOURCES = \
-	mobilect-payroll.vala \
-	application.vala \
-	database.vala \
-	administrator-list.vala \
-	administrator.vala \
-	employee-list.vala \
-	employee.vala \
-	time-record-list.vala \
-	time-record.vala \
-	window.vala \
-	login-page.vala \
-	employee-login-page.vala \
-	admin-login-page.vala \
-	cpanel.vala \
-	cpanel-tab.vala \
-	cpanel-administrators.vala \
-	cpanel-employees.vala \
-	cpanel-preferences.vala \
-	cpanel-time-records.vala \
-	cpanel-holidays.vala \
-	cpanel-report.vala \
-	password-widget.vala \
-	password-dialog.vala \
-	administrator-edit-widget.vala \
-	administrator-edit-dialog.vala \
-	employee-edit-widget.vala \
-	employee-edit-dialog.vala \
-	time-record-edit-widget.vala \
-	time-record-edit-dialog.vala \
-	date-time-entry.vala \
-	time.vala \
-	filter.vala \
-	month-info.vala \
-	pay-group.vala \
-	pay-period.vala \
-	time-period.vala \
-	report.vala \
-	regular-report.vala \
-	overtime-report.vala \
-	date-entry.vala \
+	main/mobilect-payroll.vala \
+	main/application.vala \
+	main/window.vala \
+	database/database.vala \
+	database/employee.vala \
+	database/employee-list.vala \
+	database/administrator.vala \
+	database/administrator-list.vala \
+	database/time-record.vala \
+	database/time-record-list.vala \
+	database/month-info.vala \
+	widgets/password-widget.vala \
+	widgets/password-dialog.vala \
+	widgets/administrator-edit-widget.vala \
+	widgets/administrator-edit-dialog.vala \
+	widgets/employee-edit-widget.vala \
+	widgets/employee-edit-dialog.vala \
+	widgets/time-record-edit-widget.vala \
+	widgets/time-record-edit-dialog.vala \
+	login/login-page.vala \
+	login/employee-login-page.vala \
+	login/admin-login-page.vala \
+	cpanel/cpanel.vala \
+	cpanel/cpanel-tab.vala \
+	cpanel/cpanel-employees.vala \
+	cpanel/cpanel-administrators.vala \
+	cpanel/cpanel-time-records.vala \
+	cpanel/cpanel-holidays.vala \
+	cpanel/cpanel-report.vala \
+	cpanel/cpanel-preferences.vala \
+	report/report.vala \
+	report/regular-report.vala \
+	report/overtime-report.vala \
+	datetime/time.vala \
+	datetime/date-entry.vala \
+	datetime/date-time-entry.vala \
+	filter/filter.vala \
+	filter/pay-group.vala \
+	filter/pay-period.vala \
+	filter/time-period.vala \
 	config.vapi
 
 mobilect_payroll_VALAFLAGS = \
